# AM5801-FInal-End-Sem-Submission

./: COMPILE_REPORT.md  FEM_End_Sem_Report.tex  README.md  REFERENCES_NOTEBOOK.md  fem_solver_analysis.ipynb  vhi
Final Exam/: .vhi.swp
Final Exam/fem-solver-comparison/: COMPLEXITY_ANALYSIS.md  DETAILED_REPORT.md  Makefile  PROJECT_SUMMARY.md  README.md  REFERENCES.md  SOLUTION_CONSISTENCY.md  START_HERE.md  SYSTEM_INFO.txt  WHAT_WAS_CREATED.md  fem_solver
Final Exam/fem-solver-comparison/plots/: compare_solvers.gp  error_analysis.gp  stress_distribution.gp
Final Exam/fem-solver-comparison/results/: VISUAL_SUMMARY.txt  all_benchmarks_summary.txt  performance_summary.txt
Final Exam/fem-solver-comparison/src/analysis/: stress_strain.h
Final Exam/fem-solver-comparison/src/fem/: boundary_conditions.cpp
Final Exam/fem-solver-comparison/src/matrix/: stiffness_matrix.h
Final Exam/fem-solver-comparison/src/solvers/: efficient_solver.cpp  (+2 more)
fem-solver-comparison/: CMakeLists.txt  CPP_VS_PYTHON.md  Makefile  QUICK_REFERENCE.md  README_COMPREHENSIVE.md  ROADMAP.md  TAKEAWAYS.md  analyze_results.py
fem-solver-comparison/plots/: displacement_fields.gp  generate_all_plots.gp  timing_comparison.gp
fem-solver-comparison/results/: full_output.txt
fem-solver-comparison/src/: main.cpp
fem-solver-comparison/src/analysis/: stress_strain.cpp
fem-solver-comparison/src/fem/: boundary_conditions.h
fem-solver-comparison/src/matrix/: stiffness_matrix.cpp
fem-solver-comparison/src/solvers/: naive_gauss.cpp
fem-solver-comparison/src/utils/: benchmark.h
results/: NOTEBOOK_README.txt  benchmark_python_all.csv
(+1 files in other folders)
